Adding and adjusting interface images

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css" rel="stylesheet" type="text/css">
-    <title>💬 Are you a kettle? 🧂</title>
+    <title>💭 Hi kettle! 🍶</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="animsition">
     <div class="title">
-      <h1>💬 ARE YOU A KETTLE? 🧂</h1>
+      <h1>💭 HI KETTLE! 🍶</h1>
     </div>
     <div class="wrapper">
       <div id="chat" class="chat">
